# in10matixCP4modules

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  car.cpp  car.ixx  car_constants.ixx  car_conversions.ixx  car_engine.ixx  elf.cpp  elf.ixx  goblin.cpp  goblin.ixx  heroes.cpp  heroes.ixx  human.cpp  human.ixx  main.cpp  person.cpp  person.ixx
examples/visualStudioExamples/ConsoleApplication/: ConsoleApplication.slnx
examples/visualStudioExamples/ConsoleApplication/ConsoleApplication/: ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  car.cpp  car.ixx  car_constants.ixx  car_conversions.ixx  car_engine.ixx  elf.cpp  elf.ixx  goblin.cpp  goblin.ixx  heroes.cpp  heroes.ixx  human.cpp  human.ixx  main.cpp  person.cpp  person.ixx
examples/visualStudioExamples/ConsoleApplication/ConsoleApplication/x64/Debug/: .d.json  ConsoleApplication.cpp.ifc.dt.d.json  ConsoleApplication.cpp.ifc.dt.module.json  ConsoleApplication.cpp.ifc.dt.module.json.command  ConsoleApplication.exe.recipe  ConsoleApplication.ilk  Module.ixx.ifc  Module.ixx.ifc.dt  Module.ixx.ifc.dt.command  Module.ixx.ifc.dt.d.json  Module.ixx.ifc.dt.module.json  Module.ixx.ifc.dt.module.json.command  Person.ixx.ifc.dt.module.json.command  PersonExample.exe.recipe  PersonExample.ilk  car.cpp.ifc.dt.d.json  car.cpp.ifc.dt.module.json  car.cpp.ifc.dt.module.json.command  car.cpp.module.json  car.ixx.ifc  car.ixx.ifc.d.json  car.ixx.ifc.dt  car.ixx.ifc.dt.command  car.ixx.ifc.dt.d.json  car.ixx.ifc.dt.module.json  car.ixx.ifc.dt.module.json.command  car.ixx.module.json  car_constants.ixx.ifc  (+88 more)
(+27 files in other folders)
